cabal-version: 3.0

name: libnng
version: 0

library
  build-depends: base, bytestring, text
  default-language: Haskell2010
  exposed-modules: Libnng
  extra-libraries: nng
  ghc-options: -Wall
  hs-source-dirs: src

test-suite tests
  build-depends: base, containers, libnng
  default-language: Haskell2010
  extra-libraries: nng
  ghc-options: -Wall -threaded
  hs-source-dirs: test
  main-is: Main.hs
  type: exitcode-stdio-1.0
