cabal-version: 2.4

name: libnng
version: 0

library
  build-depends:
    base,
    bytestring,
    text
  default-extensions:
    BlockArguments
    DataKinds
    DeriveAnyClass
    DerivingStrategies
    GADTs
    GeneralizedNewtypeDeriving
    KindSignatures
    LambdaCase
    OverloadedStrings
    ScopedTypeVariables
    TypeFamilies
    ViewPatterns
  default-language: Haskell2010
  exposed-modules:
    Libnng
    Nng
  extra-libraries: nng
  ghc-options: -Wall
  hs-source-dirs: src
  other-modules:
    Libnng.Foreign
    Libnng.Types
    Nng.Address
    Nng.Error

test-suite tests
  build-depends:
    base,
    containers,
    libnng,
    safe-exceptions,
    tasty,
    tasty-hunit
  default-extensions:
    BlockArguments
    LambdaCase
  default-language: Haskell2010
  extra-libraries: nng
  ghc-options: -Wall -threaded
  hs-source-dirs: test
  main-is: Main.hs
  other-modules: LibnngTests
  type: exitcode-stdio-1.0
